Code runs command on VM